[Video] Add code snippets to Newscast #50